<?xml version="1.0"?>
<package format="2">
  <name>complementary_filter</name>
  <version>0.0.0</version>
  <description>An IMU complementary_filter package</description>
  <maintainer email="fabien.colonnier@gmail.com">Fabien</maintainer>
  <license>?</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
